# round16

./: .dockerignore  Dockerfile  README.md  conda_env.yml  generation_orchestrator.py  mesh_texturing_tool.py  model_versions.yml  requirements.txt  serve.py  setup_env.sh
generator/: engine.py
generator/config/: __init__.py  qwen_edit_prompt.json  settings.py
generator/modules/: __init__.py  mesh_postprocessing.py
generator/modules/background_removal/: __init__.py  ben2_module.py  birefnet_module.py  rmbg_manager.py
generator/modules/image_edit/: __init__.py  qwen_edit.py  qwen_edit_module.py
generator/modules/post_processing/: data_structures.py  mesh_postprocessing.py  mesh_rasterizer.py  mesh_texturing_utils.py
generator/trellis2/modules/: image_feature_extractor.py
generator/trellis2/modules/sparse/conv/: conv.py  conv_spconv.py
generator/trellis2/pipelines/: __init__.py  base.py  trellis2_image_to_3d.py  trellis2_texturing.py
generator/trellis2/pipelines/rembg/: BiRefNet.py
libuvula/: CMakeLists.txt  README.md  cleanup_env.sh  conda_env.yml  pyproject.toml  requirements.txt  setup_env.sh  uv_unwrapping_tool.py
libuvula/libuvula/: CMakeLists.txt
libuvula/libuvula/Clipper2Lib/: CMakeLists.txt  README.md
libuvula/libuvula/Clipper2Lib/include/clipper2/: clipper.version.h
libuvula/libuvula/pyUvula/: CMakeLists.txt  pyUvula.cpp
libuvula/libuvula/uvula/: CMakeLists.txt
libuvula/libuvula/uvula/include/: unwrap.h
libuvula/libuvula/uvula/src/: project.cpp  unwrap.cpp  xatlas.cpp
libuvula/pyuvula/: __init__.py  io_mesh_utils.py
o-voxel/o_voxel/: postprocess.py  rasterize.py
